# dogger

./: Dockerfile  README.ZH-CN.md  README.md
.github/workflows/: main.yml
app/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
app/src/: App.jsx  Containers.jsx  Images.jsx  Info.jsx  custom-tabs.css  main.jsx  utils.js
service/: .gitignore  Cargo.toml
service/src/: main.rs
