[package]
name = "dogger"
version = "0.1.1"
edition = "2021"

[dependencies]
axum = { version = "0.7.7", features = ["http2"] }
bollard = "0.17.1"
futures-util = "0.3.31"
serde_json = "1.0.132"
tokio = { version = "1.41.0", features = ["full"] }
tower-http = { version = "0.6.1", features = ["fs","cors"] }
